bundle update and database configuration

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@ development:
   reconnect: false
   database: fureas_development
   pool: 5
-  username: kiran
-  password: db123
+  username: postgres
+  password: password
   host: localhost
   port: 5432
 
@@ -18,7 +18,7 @@ test:
   reconnect: false
   database: fureas_test
   pool: 5
-  username: kiran
-  password: db123
+  username: postgres
+  password: password
   host: localhost
   port: 5432
