--- a/config/database.yml
+++ b/config/database.yml
@@ -1,35 +1,12 @@
-production:
+development: &default
   adapter: postgresql
   encoding: unicode
-  reconnect: false
-  database: fureas_production
+  database: postgres
   pool: 5
   username: postgres
-  password: password
-  host: localhost
-  port: 5432
+  password:
+  host: db
 
-development:
-  adapter: postgresql
-  encoding: unicode
-  reconnect: false
-  database: fureas_development
-  pool: 5
-  username: postgres
-  password: password
-  host: localhost
-  port: 5432
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
-  reconnect: false
-  database: fureas_test
-  pool: 5
-  username: postgres
-  password: password
-  host: localhost
-  port: 5432
+  <<: *default
+  database: myapp_test
